# BirdML

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  LICENSE  README.md  There are estimated to be around 10.docx  main.py  pyproject.toml  reflex_app.py  ~WRL2040.tmp  ~WRL3577.tmp
.claude/: settings.local.json
.github/workflows/: deployment.yml  training.yml
api/: Dockerfile  main.py  requirements.txt
frontend/: Dockerfile  app.py
infrastructure/docker/: Dockerfile.training
infrastructure/sagemaker/: local_test.py  pipeline.py
infrastructure/sagemaker/scripts/: _s3_utils.py  run_evaluate.py  run_quality_check.py  run_train.py  run_tune.py
mlruns/0/: meta.yaml
mlruns/474921174011827840/: meta.yaml
mlruns/474921174011827840/64489782b92947098ec76c470040170a/: meta.yaml
mlruns/481170617369264279/635f49e0a2454a54aa221525d10fdcd5/: meta.yaml
mlruns/481170617369264279/88248ed1cf7b420daba0c0b255afd08f/: meta.yaml
mlruns/481170617369264279/9b1ef5fcc88e4ae88cfa63f9f5e32450/: meta.yaml
mlruns/481170617369264279/b6ad805105244b18ad5b0899c466aaa9/: meta.yaml
models/: class_names.json
notebooks/: 00_data_split.ipynb  d1_exploration.ipynb  d2_01_data_ingestion.ipynb  d2_02_feature_engineering.ipynb  d2_03_baseline.ipynb  d2_04_hyperparameter_tuning_mlflow.ipynb  d2_exploraiton.ipynb  d2_run_train.ipynb  exploration.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/1/: meta.yaml
notebooks/mlruns/467960793805646900/: meta.yaml
notebooks/mlruns/481170617369264279/: meta.yaml
notebooks/mlruns/531447493814792201/: meta.yaml
notebooks/mlruns/958066266485962170/: meta.yaml
reflex_app/: .dockerignore  Caddyfile  Dockerfile  entrypoint.sh  requirements.txt  rxconfig.py
reflex_app/assets/species_data/: ABBOTTS BABBLER.json  ABBOTTS BOOBY.json  ABYSSINIAN GROUND HORNBILL.json  AFRICAN CROWNED CRANE.json  AFRICAN EMERALD CUCKOO.json  AFRICAN FIREFINCH.json  AFRICAN OYSTER CATCHER.json  AFRICAN PIED HORNBILL.json  AFRICAN PYGMY GOOSE.json  ALBATROSS.json  ALBERTS TOWHEE.json  ALEXANDRINE PARAKEET.json  ALPINE CHOUGH.json  ALTAMIRA YELLOWTHROAT.json  AMERICAN AVOCET.json  AMERICAN BITTERN.json  AMERICAN COOT.json  AMERICAN DIPPER.json  AMERICAN FLAMINGO.json  AMERICAN GOLDFINCH.json  AMERICAN KESTREL.json  AMERICAN PIPIT.json  AMERICAN REDSTART.json  AMERICAN ROBIN.json  AMERICAN WIGEON.json  AMETHYST WOODSTAR.json  ANDEAN GOOSE.json  ANDEAN LAPWING.json  (+498 more)
reflex_app/reflex_app/: reflex_app.py  state.py  styles.py
scripts/: generate_species_thumbnails.py  make_og_image.py  replace_species_images.py
src/bird_classifier/: config.py
tests/: conftest.py  test_integration.py
tests/api/: test_main.py
tests/data/: test_dataset.py  test_transforms.py
tests/inference/: test_predict.py
tests/training/: test_engine.py  test_model.py
(+157 files in other folders)
