[project]
name = "bird-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.5",
    "httpx<0.28",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaggle>=2.1.0",
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "protobuf<4.0.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "boto3>=1.43.1",
    "optuna>=3.0.0",
    "sagemaker>=2.92.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
