[project]
name = "bird-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.5",
    "matplotlib>=3.7.0",
    "mlflow>=2.0.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "boto3>=1.43.1",
    "optuna>=3.0.0",
    "tqdm>=4.67.3",
    "httpx<0.28",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaggle>=2.1.2",
    "pandas>=2.3.3",
    "sagemaker>=2.236,<3",
]
torch = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
